<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">StayNow</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="select_location" translatable="false">Select location</string>
    <string name="previous" translatable="false">Previous</string>
    <string-array name="gender_options">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Giới tính thứ 3</item>
    </string-array>
    <string name="Home" translatable="false">Nhà</string>
    <string name="Search" translatable="false">Tìm kiếm</string>
    <string name="Calender" translatable="false">Lịch</string>
    <string name="Message" translatable="false">Tin nhắn</string>
    <string name="Profile" translatable="false">Cá nhân</string>
    <string name="Thank_you_for_trusting_us" translatable="false">Cảm ơn bạn đã tin tưởng chúng tôi</string>
    <string name="Contract_Payment_Invoice" translatable="false">Hóa Đơn Thanh Toán Hợp Đồng</string>
    <string name="Room_706" translatable="false">Phòng 706</string>
    <string name="Lease_term_5_months_from_to_the_end" translatable="false">Thời hạn thuê: 5 tháng, tính từ ngày 01/01/2021 đến hết ngày 01/06/2021</string>
    <string name="The_costs_for_the_invoice_include" translatable="false">Các chi phí cho hóa đơn bao gồm:</string>
    <string name="Room_Fee_3_500_000" translatable="false">Tiền Phòng: 3,500,000</string>
    <string name="Deposit_3_500_000" translatable="false">TIền cọc: 3,500,500</string>
    <string name="Invoice_Creation_Date_01_01_2021" translatable="false">ngày tạo hóa đơn: 01/01/2021</string>
    <string name="Fixed_service_costs_and_variable_fees_will_be_charged" translatable="false">Các chi phí dịch vụ cố định và phí biến động sẽ được tính vào hóa đơn hàng tháng. Chúng tôi sẽ nhắc nhở bạn vào ngày 28 tháng sau.</string>
    <string name="Flat_Fee" translatable="false">Phí cố định</string>
    <string name="Service_Name" translatable="false">Tên dịch vụ</string>
    <string name="Unit_Price" translatable="false">Đơn giá</string>
    <string name="Becoming_money" translatable="false">Đơn vị</string>
    <string name="Variable_fees" translatable="false">Phí biến động</string>
    <string name="Unit" translatable="false">Đơn vị</string>
    <string name="Amount_to_be_paid" translatable="false">Số tiền cần thanh toán</string>
    <string name="Room_Fee" translatable="false">Tiền phòng:</string>
    <string name="Deposit" translatable="false">Tiền cọc:</string>
    <string name="Total" translatable="false">Tổng tiền: 7,000,000</string>
    <string name="The_contract_and_invoice" translatable="false">Hợp đồng và hóa đơn đã được gửi đến người thuê. Vui lòng chờ người thuê xác nhận hợp đồng và thanh toán hóa đơn. Cảm ơn bạn</string>
    <string name="View_Contract" translatable="false">Xem lại hợp đồng</string>
    <string name="complete" translatable="false">Hoàn thành</string>
    <string name="Setting" translatable="false">Cài đặt</string>
    <string name="Save_a_login_session" translatable="false">Lưu phiên đăng nhập</string>
    <string name="Payment_Methods" translatable="false">Phương thức thanh toán</string>
    <string name="Update_information" translatable="false">Cập nhật thông tin</string>
    <string name="Change_Password" translatable="false">Đổi mật khẩu</string>
    <string name="Theme" translatable="false">Màu sắc</string>
    <string name="Languege" translatable="false">Ngôn ngữ</string>
    <string name="App_Info" translatable="false">Thông tin ứng dụng</string>
    <string name="Full_name" translatable="false">Họ và tên</string>
    <string name="Phone" translatable="false">Số điện thoại</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Update_room_location" translatable="false">Cập nhật vị trí phòng</string>
    <string name="Here_the_address_when_changing_from_your_coordinates" translatable="false">đây là địa chỉ khi đổi từ tọa độ của bạn:</string>
    <string name="Update_your_location" translatable="false">Cập nhật vị trí</string>
    <string name="Scan_QR_Code" translatable="false">Quét mã QR</string>
    <string name="Move_the_camera_to_the_QR_code_container_to_scan" translatable="false">Di chuyển camera đến vùng chứa mã QR để quét</string>
    <string name="Scan_available_photos" translatable="false">Quét ảnh có sẵn</string>
    <string name="You_are" translatable="false">Bạn là:</string>
    <string name="Innkeeper" translatable="false">Chủ nhà trọ</string>
    <string name="Tenants" translatable="false">Người thuê trọ</string>
    <string name="Payment_Options" translatable="false">Lựa chọn thanh toán</string>
    <string name="You_can_ask_someone_else_to_scan_for_you" translatable="false">Bạn có thể dùng thiết bị khác để quét</string>
    <string name="QR_code_scanning_time_for_payment" translatable="false">Thời gian quét mã QR để thanh toán</string>
    <string name="event" translatable="false">còn</string>
    <string name="Pay_with" translatable="false">Thanh toán với</string>
    <string name="by_QR_code" translatable="false">bằng mã QR</string>
    <string name="Open_Zalopay_now" translatable="false">Mở Zalopay ngay</string>
    <string name="Create_monthly_invoices" translatable="false">Tạo hóa đơn hàng tháng</string>
    <string name="into_money" translatable="false">Thành tiền</string>
    <string name="Old_Power_Indicator" translatable="false">Chỉ số điện</string>
    <string name="New_Power_Indicator" translatable="false">Chỉ số điện mới</string>
    <string name="Amount" translatable="false">Số lương</string>
    <string name="Water_Indicator" translatable="false">Chỉ số nước</string>
    <string name="New_water_Indicator" translatable="false">Chỉ số nước mới</string>
    <string name="Extra_money" translatable="false">Tiền thêm</string>
    <string name="Reduced_money" translatable="false">Tiền giảm</string>
    <string name="Enter_your_notes" translatable="false">Nhập ghi chú của bạn</string>
    <string name="Billing" translatable="false">Tính tiền</string>
    <string name="Total_fixed_charges" translatable="false">Tổng phí cố định</string>
    <string name="Total_variable_fees" translatable="false">Tổng phí biến đổi</string>
    <string name="Total_service_fee" translatable="false">Tổng phí dịch vụ</string>
    <string name="Total_bill" translatable="false">Tổng hóa đơn</string>
    <string name="Cancle" translatable="false">Hủy</string>
    <string name="Create_invoices" translatable="false">Tạo hóa đơn</string>
    <string name="Viewed_motel_room_history" translatable="false">Lịch sử phòng trọ đã xem</string>
    <string name="Room_viewing_schedule" translatable="false">Lịch sử phòng</string>
    <string name="Billding" translatable="false">Hóa đơn</string>
    <string name="Contract" translatable="false">Hợp đồng</string>
    <string name="Favorite_Posts" translatable="false">Bài đăng yêu thích</string>
    <string name="Terms_Policies" translatable="false">Điều khoản và chính sách</string>
    <string name="Great_Grandfather_Report" translatable="false">Báo cáo sự cố</string>
    <string name="Exit" translatable="false">Đăng xuất</string>
    <string name="Account_deletion_request" translatable="false">Yêu cầu xóa tài khoản</string>
    <string name="Password" translatable="false">Mật khẩu</string>
    <string name="Password_new" translatable="false">Nhập lại mật khẩu</string>
    <string name="Register" translatable="false">Đăng ký</string>
    <string name="Register_google" translatable="false">Đăng ký bằng google</string>
    <string name="Already_have_an_account" translatable="false">Bạn đã có tài khoản?</string>
    <string name="Login" translatable="false">Đăng nhập</string>
    <string name="Hello" translatable="false">Xin chào</string>
    <string name="Log_in_to_your_account" translatable="false">Hãy đăng nhập vào tài khoản của bạn</string>
    <string name="Remember_your_account" translatable="false">Nhớ tài khoản</string>
    <string name="Forgot_Password" translatable="false">Quên mật khẩu</string>
    <string name="Login_google" translatable="false">Đăng nhập bằng google</string>
    <string name="Don_have_an_account_yet" translatable="false">Bạn chưa có tài khoản?</string>
    <string name="Register_now" translatable="false">Đăng ký ngay</string>
    <string name="Price_range" translatable="false">Khoảng giá</string>
    <string name="Notification" translatable="false">Thông báo</string>
    <string name="Verify" translatable="false">Xác minh</string>
    <string name="Enter_the_code_sent_to" translatable="false">Nhập mã được gửi đến</string>
    <string name="If_you_haven_received_the_code_yet_click_Resend" translatable="false">Nếu chưa nhận được mã, hãy ấn gửi lại</string>
    <string name="Confirm" translatable="false">Xác nhận</string>
    <string name="Resend_the_following_code" translatable="false">Gửi lại mã sau</string>
    <string name="Declaration_of_payment_information" translatable="false">Khai báo thông tin thanh toán</string>
    <string name="ZaloPay_Linked_Phone_Number" translatable="false">Số điện thoại liên kết ZaloPay</string>
    <string name="Enter_a_phone_number" translatable="false">Nhập số điện thoại</string>
    <string name="ZaloPay_Account_Name" translatable="false">Tên tài khoản ZaloPay</string>
    <string name="Enter_the_account_name" translatable="false">Nhập tên tài khoản</string>
    <string name="ZaloPay_QR_code_optional" translatable="false">Mã QR ZaloPay (tùy chọn)</string>
    <string name="Upload_your_QR_code" translatable="false">Tải QR lên</string>
    <string name="Save_information" translatable="false">Lưu thông tin</string>
    <string name="Comment_Feedback" translatable="false">Viết phản hồi</string>
    <string name="Send_Feedback" translatable="false">Gửi phản hồi</string>
    <string name="Invoice_code" translatable="false">Mã hóa đơn: #1234567</string>
    <string name="Tenant" translatable="false">Người Thuê:</string>
    <string name="Tenant_name" translatable="false">[Tên Người Thuê]</string>
    <string name="Tenant_address" translatable="false">[Address Người Thuê]</string>
    <string name="Tenant_id" translatable="false">[Bd Người Thuê]</string>
    <string name="Host" translatable="false">Chủ Trọ:</string>
    <string name="Host_name" translatable="false">[Tên Chủ Trọ]</string>
    <string name="Host_address" translatable="false">[Address Chủ Trọ]</string>
    <string name="Host_id" translatable="false">[Bd Chủ Trọ]</string>
    <string name="Room_name" translatable="false">Tên Phòng</string>
    <string name="Address" translatable="false">Địa chỉ</string>
    <string name="Service_fee" translatable="false">Tiền dịch vụ: 500,000 VND</string>
    <string name="Room_fee" translatable="false">Tiền phòng: 500,000 VND</string>
    <string name="Total_amount" translatable="false">Tổng tiền: 500,000 VND</string>
    <string name="Start_date" translatable="false">Ngày bắt đầu</string>
    <string name="End_date" translatable="false">Ngày kết thúc</string>
    <string name="Rental_duration" translatable="false">Thời hạn thuê</string>
    <string name="Terms_and_conditions" translatable="false">Điều khoản</string>
    <string name="Payment_date" translatable="false">Ngày thanh toán</string>
    <string name="Mini_Apartment" translatable="false">Chung cư mini</string>
    <string name="VND" translatable="false">300000 VND</string>
    <string name="Number" translatable="false">123</string>
    <string name="Are_you_sure_you_want_to_switch_statuses" translatable="false">Bạn có chắc chắn muốn chuyển trạng thái không?</string>
</resources>