<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/addavatar" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/ten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/profile"
                    android:drawablePadding="12dp"
                    android:hint="@string/Full_name"
                    android:padding="10dp"

                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/sdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/imgphone"
                    android:drawablePadding="12dp"
                    android:hint="@string/Phone"
                    android:inputType="phone"
                    android:padding="10dp"

                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/iconemail"
                    android:drawablePadding="12dp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="12dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/rp_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="12dp"
                    android:hint="@string/Password_new"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/Register" />

            <Button
                android:id="@+id/btn_register_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register_google" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Already_have_an_account"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txtdangnhap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Login"
                    android:layout_marginLeft="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
